--- a/ftl/BUILD
+++ b/ftl/BUILD
@@ -4,6 +4,12 @@ load(
     "@io_bazel_rules_docker//docker/contrib/python:image.bzl",
     "py_image",
 )
+load(
+    "@io_bazel_rules_docker//docker:docker.bzl",
+    "docker_push",
+    "docker_build",
+)
+load("@subpar//:subpar.bzl", "par_binary")
 
 py_library(
     name = "ftl_lib",
